syntax = "proto3";

package grpcgateway.pb;

import "github.com/plgd-dev/hub/resource-aggregate/pb/events.proto";

option go_package = "github.com/plgd-dev/hub/v2/grpc-gateway/pb;pb";

message UpdateDeviceMetadataRequest{
    enum ShadowSynchronization {
      DISABLED = 0;
      ENABLED = 1;
    }
    string device_id = 1;
    ShadowSynchronization shadow_synchronization = 2;
    int64 time_to_live = 3;  // command validity in nanoseconds. 0 means forever and minimal value is 100000000 (100ms).
}

message UpdateDeviceMetadataResponse{
  resourceaggregate.pb.DeviceMetadataUpdated data = 1;
}